fixed bug hero image not showing

--- a/src/output.css
+++ b/src/output.css
@@ -548,12 +548,12 @@ video {
 
 .hero {
   --max-dimension: 40.625rem;
-  background: url("/images/mobile/image-hero.jpg") no-repeat center top;
+  background: url("../images/mobile/image-hero.jpg") no-repeat center top;
   height: 80vh;
   max-height: var(--max-dimension);
   @media (min-width: 640px) {
     background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),
-            url("/images/desktop/image-hero.jpg");
+            url("..//images/desktop/image-hero.jpg");
   }
   & h1 {
     font-size: 2rem;
